<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAddressBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="rememberpassword">RemenberPassword</string>
    <string name="name">Name</string>
    <string name="tel">Tel</string>
    <string name="group">Group</string>
    <string name="colleague">Colleague</string>
    <string name="classmate">Classmate</string>
    <string name="friend">Friend</string>
    <string name="address_book">Address_book</string>
    <string name="addRelation">AddRelation</string>
    <string name="save">Save</string>
    <string name="name_hint">Wang  wu</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="save_message">Are you want to save?</string>
    <string name="delete_message">Are you want to delete the selected record?</string>
    <string name="find_fail">No data can be queried from the database</string>
    <string name="login_fail">account or password is invalid</string>

</resources>