<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".MainActivity" >
    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="5pt"
        android:layout_marginLeft="15pt"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginLeft="10pt"
        android:layout_marginTop="5pt"
        android:text="@string/tel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/gp"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginTop="5pt"
        android:text="@string/group"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15dp" />
</LinearLayout>